--- a/style.css
+++ b/style.css
@@ -20,6 +20,54 @@
 }
 /* for colors */
 
+.overlay{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--ccclr);
+    z-index: 1000;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: 1s;
+}
+
+.overlay.active{
+    transform: translateY(-100%);
+}
+
+.overlay ~ *{
+    display: none;
+}
+.overlay.active ~ *{
+    display: block;
+}
+
+.click{
+    display: inline-block;
+
+    animation-name: clickani;
+    animation-duration: 1s;
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    animation-iteration-count: infinite;
+}
+
+@keyframes clickani{
+    0%,100%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(20px);
+    }
+}
+
+
+#audio{
+    display: none;
+}
+
 /* for first sky section */
 .skysection{
     position: relative;
@@ -777,6 +825,15 @@ footer{
 
 /* Make It Responsive for mobile */
 @media (max-width: 500px){
+
+    .click{
+        width: 130px;
+    }
+    .click img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
     /* for first sky section */
     .moon {
