--- a/style.css
+++ b/style.css
@@ -1050,7 +1050,7 @@ footer{
         }
     }
     .bigcircle {
-        bottom: 0px;
+        bottom: -10%;
         left: calc(50% - 250px);
         width: 500px;
         height: 400px;
@@ -1092,7 +1092,7 @@ footer{
     }
     .gifticon {
         width: 100px;
-        top: 45%;
+        top: 50%;
         left: calc(50% - 40px);
         z-index: 2;
     }
